# plugins

./: .gitignore  .travis.yml  BUILDING.CVS  Makefile  README  Setup.hs  Setup.lhs  TODO  VERSION  autogen.sh  config.h.in  config.mk.in  configure  configure.ac  happy.sh  plugins.cabal  plugins.cabal.hsx  stack.yaml
.github/workflows/: ci.yml
AltData/: Dynamic.hs  Typeable.hs
Language/Hi/: Parser.hs  Syntax.hs  hschooks.c
System/: MkTemp.hs
System/Eval/: Haskell.hs  Utils.hs
System/Plugins/: Consts.hs  Env.hs  Load.hs  Make.hs  PackageAPI.hs  ParsePkgConfCabal.hs  Parser.hs  Process.hs  Utils.hs
docs/: Makefile  hs-plugins.1  hs-plugins.tex  munge.sed
examples/: build.mk  eval.mk  foreign.mk
examples/conf/simple/prog/: Main.hs
examples/dynload/io/: TestIO.hs
examples/dynload/io/api/: API.hs
examples/dynload/io/prog/: Main.hs
examples/dynload/poly/: Plugin.hs
examples/dynload/poly/api/: API.hs
examples/dynload/poly/prog/: Main.hs
examples/dynload/should_fail/: Plugin.hs
examples/dynload/should_fail/api/: API.hs
examples/dynload/should_fail/prog/: Main.hs
examples/dynload/should_fail_1/: Plugin.hs
examples/dynload/should_fail_1/prog/: Main.hs
examples/dynload/should_fail_2/: Plugin.in  Plugin.stub
examples/dynload/should_fail_2/api/: API.hs
examples/dynload/should_fail_2/prog/: Main.hs  expected.604
examples/dynload/should_fail_3/: Plugin.in
examples/dynload/should_fail_3/api/: API.hs
examples/dynload/should_fail_3/prog/: Main.hs  expected.604
examples/dynload/simple/: Plugin.hs
examples/dynload/simple/api/: API.hs
examples/dynload/simple/prog/: Main.hs
examples/eval/eval1/: Main.hs
examples/eval/eval2/: Main.hs
examples/eval/eval3/: Main.hs
examples/eval/eval_/: Main.hs
examples/eval/eval_fn/: Main.hs
examples/eval/eval_fn1/: Main.hs
examples/eval/unsafeidir/: Main.hs
examples/hier/hier1/prog/: Main.hs
examples/hier/hier2/prog/: Main.hs
examples/hier/hier3/: Main.hs
examples/hier/hier4/: Main.hs
examples/hmake/lib-plugs/: Main.hs  Makefile
examples/hmake/one-shot/: Main.hs  Makefile
examples/iface/null/: Main.hs  expected  expected.604
examples/load/io/: TestIO.hs
examples/load/io/prog/: Main.hs
examples/load/load_0/prog/: Main.hs
examples/load/loadpkg/: Main.hs
examples/load/null/prog/: Main.hs
examples/load/rawload/: Main.hs  Makefile  t.c
examples/load/thiemann0/prog/: Main.hs
examples/load/thiemann2/prog/: Main.hs
examples/load/unloadpkg/: Main.hs
examples/make/makeall001/prog/: Main.hs
examples/make/null/prog/: Main.hs
examples/make/o/prog/: Main.hs
examples/make/odir/prog/: Main.hs
examples/make/remake001/: Main.hs
examples/make/remake001_should_fail/: Main.hs
examples/make/simple/prog/: Main.hs
examples/makewith/global_pragma/: Plugin.hs
examples/makewith/io/: TestIO.conf
examples/makewith/io/prog/: Main.hs
examples/makewith/merge00/: Main.hs
examples/makewith/mergeto0/: Main.hs
examples/makewith/module_name/: Main.hs
examples/makewith/multi_make/: Main.hs
examples/makewith/unsafeio/: Unsafe.conf
examples/misc/mkstemps/: Main.hs
examples/objc/expression_parser/: PluginEvalAux.hs
examples/plugs/plugs/: Main.hs  Makefile
examples/plugs/runplugs/: Main.hs  Makefile
examples/popen/test1/: Main.hs
examples/printf/000/: Main.hs  expected  printf.sh
examples/printf/001/: Main.hs  expected
examples/printf/002/: Main.hs  expected
examples/printf/should_fail_000/: Main.hs  expected  expected.604
examples/printf/should_fail_001/: Main.hs  expected  expected.604
examples/shell/shell/: Main.hs
examples/shell/simple/: Main.hs
examples/typecase/000/: Main.hs  expected
examples/unloadAll/null/: Makefile
plugins/: plugins.cabal
plugins/AltData/: Typeable.hs
plugins/Language/Hi/: Parser.hs
plugins/System/Plugins/: Consts.hs  Utils.hs
scripts/: mkrelease.sh
scripts/openbsd-port/: Makefile
src/: Makefile  README  build.mk  plugins.cabal  plugins.cabal.in
src/Language/Hi/: Binary.hs  FastString.hs  Parser.hs
src/System/: Eval.hs  MkTemp.hs  Plugins.hs
src/System/Eval/: Haskell.hs  Utils.hs
src/System/Plugins/: Consts.hs  Env.hs  Load.hs  LoadTypes.hs  Make.hs  PackageAPI.hs  ParsePkgConfCabal.hs  ParsePkgConfCabal.y  ParsePkgConfCabal.y_in  ParsePkgConfLite.hs  Parser.hs  Process.hs  Utils.hs
src/altdata/: AltData.hs  Makefile  altdata.conf.in.cpp
src/altdata/AltData/: Dynamic.hs
src/eval/: Eval.hs  Makefile  eval.conf.in.cpp
src/eval/Eval/: Haskell.hs  Meta.hs  Utils.hs
src/hi/: Hi.hs  Makefile  hi.conf.in.cpp
src/hi/Hi/: Binary.hs  FastMutInt.hs  FastString.hs  Parser.hs  PrimPacked.hs  Syntax.hs
src/hi/Language/Hi/: Binary.hs  FastMutInt.hs  FastString.hs  Parser.hs  PrimPacked.hs  hschooks.h
src/plugins/: Makefile  Plugins.hs  plugins.conf.in.cpp
src/plugins/Plugins/: Consts.hs  Env.hs  Load.hs  Make.hs  MkTemp.hs  Package.hs  PackageAPI.hs  ParsePkgConfCabal.hs  ParsePkgConfCabal.y  ParsePkgConfLite.hs  ParsePkgConfLite.y  Parser.hs  Utils.hs
src/plugins/System/: MkTemp.hs
src/plugins/System/Eval/: Haskell.hs  Utils.hs
src/plugins/System/Plugins/: Consts.hs  Env.hs  Load.hs  LoadTypes.hs  Make.hs  PackageAPI.hs  ParsePkgConfLite.hs  Parser.hs  Utils.hs
src/printf/: Makefile  Printf.hs  printf.conf.in.cpp
src/printf/Printf/: Compile.hs  Lexer.hs  Lexer.x  Parser.hs  Parser.y
testsuite/: build.mk  check.mk  eval.mk  foreign.mk
testsuite/dynload/io/: TestIO.hs
testsuite/dynload/poly/: Plugin.hs
testsuite/dynload/should_fail/: Plugin.hs
testsuite/dynload/should_fail_1/: Plugin.hs
testsuite/dynload/should_fail_2/: Plugin.in  Plugin.stub
testsuite/dynload/should_fail_3/: Plugin.in
testsuite/dynload/simple/: Plugin.hs
testsuite/eval/eval3/: Main.hs
testsuite/eval/eval_fn1/: Poly.hs
testsuite/iface/null/: expected.604
testsuite/load/plain/: Makefile  TestIO.hs
testsuite/misc/mkstemps/: Main.hs  expected
testsuite/objc/expression_parser/: PluginEvalAux.hs
testsuite/pdynload/bayley1/: Load.hs
testsuite/pdynload/poly/: Plugin.hs
testsuite/plugs/runplugs/: Makefile
(+35 files in other folders)
