cabal-version:      3.0
name:               plugins
version:            1.6.2
homepage:           https://github.com/stepcut/plugins
synopsis:           Dynamic linking for Haskell and C objects
description:        Dynamic linking and runtime evaluation of Haskell,
                    and C, including dependency chasing and package resolution.
                    .
                    Described in the papers:

                     * /Plugging Haskell In/

                     * /Dynamic Applications from the Ground Up/

                     * /Dynamic Extension of Typed Functional Languages/.

category:           System
license:            BSD-3-Clause
License-file:       LICENSE
author:             Don Stewart 2004..2010
maintainer:         Jeremy Shaw <jeremy@seereason.com>
build-type:         Configure
Tested-with:        GHC == 7.4.2
                  , GHC == 7.6.3
                  , GHC == 7.8.4
                  , GHC == 7.10.3
                  , GHC == 8.0.2
                  , GHC == 8.2.2
                  , GHC == 8.6.5
                  , GHC == 8.8.3
                  , GHC == 8.10.1
extra-source-files: config.guess, config.h.in, config.mk.in, config.sub,
                    configure, configure.ac, install.sh, Makefile,
                    testsuite/makewith/io/TestIO.conf.in,
                    testsuite/makewith/unsafeio/Unsafe.conf.in

library
    default-language: Haskell2010
    exposed-modules:
            System.Eval,
            System.Eval.Haskell,
            System.Eval.Utils,
            System.Plugins,
            System.Plugins.Consts,
            System.Plugins.Env,
            System.Plugins.Load,
            System.Plugins.LoadTypes,
            System.Plugins.Make,
            System.Plugins.Parser,
            System.Plugins.Process,
            System.Plugins.Utils

    default-extensions:   CPP,
                          ForeignFunctionInterface
    ghc-options:          -Wall -funbox-strict-fields -fno-warn-missing-signatures
    hs-source-dirs:       src
    build-depends:        base  >= 4 && < 5,
                          Cabal ^>= 3.8,
                          containers,
                          array,
                          directory,
                          filepath,
                          random,
                          process,
                          split,
                          ghc >= 6.10,
                          ghc-prim,
                          haskell-src

    if impl(ghc >= 7.2)
        build-depends:    ghc-paths

source-repository head
  type:             git
  location:         https://github.com/stepcut/plugins
